<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="?attr/actionBarSize"
    android:background="@color/Negro"
    android:id="@+id/myToolBar"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"

        android:textColor="@color/Blanco"
        android:textSize="22sp"
        android:textStyle="bold"
        android:translationZ="10dp" />

</androidx.appcompat.widget.Toolbar>